--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tic Tac Toe</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-image: linear-gradient(to right, lightblue , pink);
       margin: 0;
       display: flex;
@@ -15,42 +15,62 @@
       flex-direction: column;
       height: 100vh;
     }
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 2px;
-  width: 300px;
-  height: 300px;
-  border: 2px solid #000000;
-  border-radius: 10px;
-  overflow: hidden;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-}
+    .container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(3, 1fr);
+      gap: 2px;
+      width: 300px;
+      height: 300px;
+      border: 2px solid #000000;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    }
 
-.cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2em;
-  color: #ffffff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  background-color: black;
-}
+    .cell {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2em;
+      color: #ffffff;
+      cursor: pointer;
+      transition: background-color 0.3s;
+      background-color: black;
+    }
+
     .cell:hover {
       background-color: rgba(0, 0, 0, 0.1);
     }
+
     .cell:nth-child(3n+1) {
       border-right: 2px solid #000000;
     }
+
     .cell:nth-child(-n+3) {
       border-bottom: 2px solid #000000;
     }
+
     .turn {
       font-size: 24px;
       margin-top: 20px;
       color: #ffffff;
+    }
+
+    .reset-button {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #ffffff;
+      color: #000000;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .reset-button:hover {
+      background-color: #cccccc;
     }
   </style>
 </head>
@@ -67,6 +87,7 @@
     <div class="cell" onclick="handleClick(8)"></div>
   </div>
   <div class="turn" id="turnDisplay">Current Turn: X</div>
+  <button class="reset-button" onclick="resetGame()">Reset Game</button>
   <script>
     let currentPlayer = 'X';
     let board = ['', '', '', '', '', '', '', '', ''];
@@ -82,32 +103,32 @@
     ];
 
     function checkWinner() {
-  for (let combo of winningCombos) {
-    const [a, b, c] = combo;
-    if (board[a] && board[a] === board[b] && board[a] === board[c]) {
-      return board[a];
+      for (let combo of winningCombos) {
+        const [a, b, c] = combo;
+        if (board[a] && board[a] === board[b] && board[a] === board[c]) {
+          return board[a];
+        }
+      }
+      return null;
     }
-  }
-  return null;
-}
 
     function handleClick(index) {
-  if (!board[index]) {
-    board[index] = currentPlayer;
-    document.getElementById('board').children[index].innerText = currentPlayer;
-    const winner = checkWinner();
-    if (winner) {
-      alert(`${winner} wins!`);
-      resetGame();
-    } else if (board.every(cell => cell !== '')) {
-      alert('It\'s a tie!');
-      resetGame();
-    } else {
-      currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
-      document.getElementById('turnDisplay').innerText = `Current Turn: ${currentPlayer}`;
+      if (!board[index]) {
+        board[index] = currentPlayer;
+        document.getElementById('board').children[index].innerText = currentPlayer;
+        const winner = checkWinner();
+        if (winner) {
+          alert(`${winner} wins!`);
+          resetGame();
+        } else if (board.every(cell => cell !== '')) {
+          alert('It\'s a tie!');
+          resetGame();
+        } else {
+          currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+          document.getElementById('turnDisplay').innerText = `Current Turn: ${currentPlayer}`;
+        }
+      }
     }
-  }
-}
 
     function resetGame() {
       currentPlayer = 'X';
