--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
   </style>
 </head>
 <body>
+  <h1 style="color: #ffffff; margin-bottom: 20px;">Tic Tac Toe</h1>
   <div class="container" id="board">
     <div class="cell" onclick="handleClick(0)"></div>
     <div class="cell" onclick="handleClick(1)"></div>
@@ -136,7 +137,7 @@
   </div>
   <div class="turn" id="turnDisplay">Current Turn: X</div>
   <button class="reset-button" onclick="resetGame()">Reset Game</button>
-  <div class="footer">Created by Sadwave</div>
+  <div class="footer">Created by sadwave</div>
 
   <div id="winnerModal" class="winner-modal">
     <div class="winner-content">
