--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       align-items: center;
       flex-direction: column;
       height: 100vh;
+      overflow: hidden;
     }
     .container {
       display: grid;
